[package]
name          = "mio-extras"
version       = "2.0.6"
license       = "MIT OR Apache-2.0"
authors       = ["Carl Lerche <me@carllerche.com>", "David Hotham"]
description   = "Extra components for use with Mio"
documentation = "https://docs.rs/mio-extras"
repository    = "https://github.com/dimbleby/mio-extras"
readme        = "README.md"
keywords      = ["io", "async", "non-blocking"]
categories    = ["asynchronous"]
exclude       = [".gitignore"]
edition       = "2018"

[dependencies]
# std-only libraries
mio = { version = "0.6.14", optional = true, default-features = false }

# SGX-enabled libraries
mio_sgx = { package = "mio", git = "https://github.com/mesalock-linux/mio-sgx", tag = "sgx_1.1.3", optional = true }

# no-std compatible libraries
lazycell = { version = "1", default-features = false }
log = { version = "0.4", default-features = false }
slab = { version = "0.4", default-features = false }

[features]
default = ["std"]
sgx = [
    "mio_sgx",
]
std = [
    "mio",
    "log/std",
    "slab/std",
]

[[test]]
name = "test"
path = "test/mod.rs"
